// Copyright (c) 2018 ContentBox Authors.
// Use of this source code is governed by a MIT-style
// license that can be found in the LICENSE file.

syntax = "proto3";

package corepb;

message Log {
  bytes address = 1;
  repeated bytes topics = 2;
  bytes data = 3;
  uint64 block_number = 4;
  bytes tx_hash = 5;
  uint32 tx_index = 6;
  bytes block_hash = 7;
  uint32 index = 8;
  bool removed = 9;
}
